deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: my-app  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app  
  template:
    metadata:
      labels:
        app: my-app  
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
