flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: 904569689818.dkr.ecr.sa-east-1.amazonaws.com/flaskrepo:latest
        ports:
        - containerPort: 8080
